--- a/css/style.scss
+++ b/css/style.scss
@@ -21,10 +21,12 @@ body {
 
 a:link {
     color: $cream;
+    font-weight: bold;
     text-decoration: none;
 }
 a:visited {
     color: $cream;
+    font-weight: bold;
     text-decoration: none;
 }
 
